# RUNTIME

./: .gitignore  DOCUMENTATION.md  GUIDE.md  README copy.md  README.md  README2.md  RUNTIME 2.sln  SYNTAX.md  pypi.md  run.py  runtime.py  setup.cfg  setup.py  shell.py
CLI/: Program.cs
Core/: Context.cs  Interpreter.cs  Lexer.cs  Node.cs  Parser.cs  Position.cs  SYNTAX.md  Source.cs  Value.cs
data/: blank.run  runtime.run  test.run  test1.run  test2.run  test3.run  test4.run  test5.run  while.run
programs/examples/: ai_written_features.run  code_is_text.run  dynamic_variables.run  hot_swapping_built_ins.run
runtime/: SYNTAX.md  cli.py  runtime.py
