[metadata]
name = RUNTIME
version = 0.1.0
description = The RUNTIME programming language
author = Miguel Lorán
license = GPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mikuel210/RUNTIME

[options]
packages = find:
python_requires = >=3.8
install_requires =
    colorama

[options.entry_points]
console_scripts =
    runtime = runtime.cli:main
